update Dockerfile